RESOLVED FIXED 23681
Worker tests crash in debug builds if run --singly
https://bugs.webkit.org/show_bug.cgi?id=23681
Summary Worker tests crash in debug builds if run --singly
Alexey Proskuryakov
Reported 2009-02-02 05:56:48 PST
Fix forthcoming.
Attachments
proposed fix (3.42 KB, patch)
2009-02-02 06:02 PST, Alexey Proskuryakov
sam: review+
Alexey Proskuryakov
Comment 1 2009-02-02 06:02:15 PST
Created attachment 27245 [details] proposed fix
David Levin
Comment 2 2009-02-02 10:10:52 PST
> wtf/ThreadingPthreads.cpp: Changed assertions to convebtional form. typo: convebtional
Alexey Proskuryakov
Comment 3 2009-02-04 00:55:47 PST
Committed revision 40608.
Note You need to log in before you can comment on or make changes to this bug.