        Reviewed by Sam Weinig.

https://bugs.webkit.org/show_bug.cgi?id=23681
        Worker tests crash in debug builds if run --singly

        The crash happened because worker threads continued running while debug-only static objects
        were already being destroyed on main thread.

        * runtime/Structure.cpp: Create static debug-only sets in heap, so that they don't get
        destroyed.

        * wtf/ThreadingPthreads.cpp: Changed assertions to conventional form.



Canonical link: https://commits.webkit.org/32753@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40608 268f45cc-cd09-0410-ab3c-d52691b4dbfc